--- a/ann's_portifolio_react/package.json
+++ b/ann's_portifolio_react/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://a-kum2580.github.io/Portfolio_react_app",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
